syntax = "proto3";
package rl;

message MemoryFramePb {
  repeated double obs = 1;
  repeated double act = 2;
  double rew = 3;
  repeated double next_obs = 4;
  bool done = 5;
}

message EpisodeMemoryFramePb {
  repeated MemoryFramePb memory_frame = 1;
}